<resources>
    <string name="app_name">App Delivery</string>
    <string name="logo_app">logo app</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Password</string>
    <string name="hint_nome">Name</string>
    <string name="bt_entrar">To enter</string>
    <string name="frase_criar_conta">Create an account by clicking here</string>
    <string name="foto_usuario">user photo</string>
    <string name="bt_selecionar_foto">Select a photo</string>
    <string name="bt_cadastrar">Register</string>
    <string name="erro_campo">Fill in all fields</string>
    <string name="erro_senha_pequena">Enter a password with at least 6 characters!</string>
    <string name="erro_email">Invalid email!</string>
    <string name="erro_login">Error logging in user!</string>
    <string name="erro_internet">No internet connection!</string>
    <string name="erro_conta_duplicada">This account has already been registered!</string>
    <string name="erro_cadastro">Error registering user!</string>
    <string name="sucesso_cadastro">Registration completed successfully!</string>
    <string name="bt_ok">Ok</string>
    <string name="bt_finalizar_pedido">finalize order</string>
    <string name="valor_unitario">unit value</string>
    <string name="sucesso_dados" translatable="false">Sucesso ao salvar os dados!</string>
    <string name="falha_dados" translatable="false">Erro ao salvar os dados!</string>
    <string name="ttitulo_produto" translatable="false">Produto 1</string>
    <string name="preco_produto" translatable="false">R$ 50,00</string>
    <string name="descricao_produto" translatable="false">Às vezes, a melhor maneira de ficar perto de alguém que você ama é sendo apenas um amigo.</string>
    <string name="title_perfil">Profile</string>
    <string name="title_pedidos">Requests</string>
    <string name="title_sair">Log out of account</string>
    <string name="bt_editar_perfil">edit profile</string>
    <string name="bt_atualizar_dados">update data</string>
</resources>