<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        app:showAsAction="always"
        android:title=""
        android:icon="@drawable/ic_menu">
        <menu>
            <item
                android:id="@+id/perfil"
                android:title="@string/title_perfil"
                android:icon="@drawable/ic_perfil"
                app:showAsAction="never" />

            <item
                android:id="@+id/produtos"
                android:title="@string/title_pedidos"
                android:icon="@drawable/ic_pedido"
                app:showAsAction="never"/>

            <item
                android:id="@+id/deslogar"
                android:title="@string/title_sair"
                android:icon="@drawable/ic_deslogar"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>