<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".DetalhesProduto">

        <ImageView
            android:id="@+id/ivFotoProduto"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/ttitulo_produto"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/tvTituloProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ttitulo_produto"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tvDescricaoProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao_produto"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_unitario"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tvPrecoProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preco_produto"
            android:textSize="18sp"
            android:layout_marginStart="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="15dp"
            android:backgroundTint="@color/red"
            android:text="@string/bt_finalizar_pedido"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:drawableEnd="@drawable/ic_add"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>